[gd_scene load_steps=15 format=3 uid="uid://q35rylql08eo"]

[ext_resource type="PackedScene" uid="uid://qmvuop24t861" path="res://player/player.tscn" id="1_b3udp"]
[ext_resource type="Script" path="res://main_scene/main.gd" id="1_whmjb"]
[ext_resource type="PackedScene" uid="uid://r74xg3kewiwx" path="res://mob/fadingMob.tscn" id="2_3lih4"]
[ext_resource type="PackedScene" uid="uid://bmqtsnh8ehcaw" path="res://mob/stopping_mob.tscn" id="2_a7pjf"]
[ext_resource type="PackedScene" uid="uid://bfgtvc6xcin25" path="res://mob/mob.tscn" id="2_wrjx6"]
[ext_resource type="PackedScene" uid="uid://c1lby52l6gtj1" path="res://mob/mob_2.tscn" id="3_c0kk0"]
[ext_resource type="PackedScene" uid="uid://6ns5gf6y2gys" path="res://hud/hud.tscn" id="4_x6lqc"]
[ext_resource type="AudioStream" uid="uid://du8tx4ci746f8" path="res://art/House In a Forest Loop.ogg" id="5_cmpe7"]
[ext_resource type="AudioStream" uid="uid://w3bk32qlbi1e" path="res://art/gameover.wav" id="6_64rg6"]
[ext_resource type="PackedScene" uid="uid://tisb1nrfre6b" path="res://powerups/nuke_powerup/nuke_powerup.tscn" id="6_wwfqw"]
[ext_resource type="PackedScene" uid="uid://ce136o4t1wrjp" path="res://powerups/double_powerup/double_powerup.tscn" id="7_meoix"]

[sub_resource type="Gradient" id="Gradient_vpnji"]
colors = PackedColorArray(0.263812, 0.127635, 0.520061, 1, 0.0366671, 2.88604e-05, 0.152347, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yvciw"]
gradient = SubResource("Gradient_vpnji")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Curve2D" id="Curve2D_nys1p"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_whmjb")
mob_scene = Array[PackedScene]([ExtResource("2_wrjx6"), ExtResource("3_c0kk0"), ExtResource("2_3lih4"), ExtResource("2_a7pjf")])
powerup_scene = Array[PackedScene]([ExtResource("6_wwfqw"), ExtResource("7_meoix")])

[node name="MobTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="StartTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="PowerupTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 20.0

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_yvciw")

[node name="StartPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(240, 450)

[node name="Player" parent="." instance=ExtResource("1_b3udp")]
unique_name_in_owner = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_nys1p")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
unique_name_in_owner = true

[node name="HUD" parent="." instance=ExtResource("4_x6lqc")]
unique_name_in_owner = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_cmpe7")

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_64rg6")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
